# serializer version: 1
# name: test_1_3times_failing[1]
  'division by zero'
# ---
# name: test_1_3times_failing[3]
  'division by zero'
# ---
# name: test_a_not_implemented_error_analytic_discipline
  'Error: This method is not implemented.'
# ---
# name: test_failure_zero_division_error
  'division by zero'
# ---
# name: test_failure_zero_division_error_n_trials[1-fatal_exceptions0]
  'division by zero'
# ---
# name: test_failure_zero_division_error_n_trials[1-fatal_exceptions1]
  'division by zero'
# ---
# name: test_failure_zero_division_error_n_trials[1-fatal_exceptions2]
  'division by zero'
# ---
# name: test_failure_zero_division_error_n_trials[3-fatal_exceptions0]
  'division by zero'
# ---
# name: test_failure_zero_division_error_n_trials[3-fatal_exceptions1]
  'division by zero'
# ---
# name: test_failure_zero_division_error_n_trials[3-fatal_exceptions2]
  'division by zero'
# ---
# name: test_n_trials_zero_raises
  'n_trials must be >= 1, got 0'
# ---
# name: test_timeout_warning_logged
  'Timeout reached during the execution of discipline SlowThreadDiscipline'
# ---
# name: test_wait_time_and_n_trials[SlowProcessDiscipline-1-0.01]
  'Timeout reached during the execution of discipline SlowProcessDiscipline'
# ---
# name: test_wait_time_and_n_trials[SlowProcessDiscipline-1-0.1]
  'Timeout reached during the execution of discipline SlowProcessDiscipline'
# ---
# name: test_wait_time_and_n_trials[SlowProcessDiscipline-3-0.01]
  'Timeout reached during the execution of discipline SlowProcessDiscipline'
# ---
# name: test_wait_time_and_n_trials[SlowProcessDiscipline-3-0.1]
  'Timeout reached during the execution of discipline SlowProcessDiscipline'
# ---
# name: test_wait_time_and_n_trials[SlowThreadDiscipline-1-0.01]
  'Timeout reached during the execution of discipline SlowThreadDiscipline'
# ---
# name: test_wait_time_and_n_trials[SlowThreadDiscipline-1-0.1]
  'Timeout reached during the execution of discipline SlowThreadDiscipline'
# ---
# name: test_wait_time_and_n_trials[SlowThreadDiscipline-3-0.01]
  'Timeout reached during the execution of discipline SlowThreadDiscipline'
# ---
# name: test_wait_time_and_n_trials[SlowThreadDiscipline-3-0.1]
  'Timeout reached during the execution of discipline SlowThreadDiscipline'
# ---
